<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MessageLink</string>
    <string name="settings">Settings</string>
    <string name="raspberry_pi">Raspberry Pi</string>
    <string name="pi_enabled">Send to Raspberry Pi</string>
    <string name="pi_url">Pi URL</string>
    <string name="save">Save</string>
    <string name="open_notification_access">Enable notification access</string>
    <string name="search">Search</string>
    <string name="all_apps">All apps</string>
    <string name="clear_notifications">Очистить уведомления</string>
</resources>
